<resources>
    <string name="app_name">Amity rental</string>
    <string name="fname">First Name</string>
    <string name="lname">Second Name</string>
    <string name="passwordReg">Password</string>
    <string name="passwordReg2">Confirm Password </string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog">Sign in</string>
    <string name="PhoneReg">Phone No.</string>
    <string name="signin_redirect">Already a registered? Sign in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Tenants</string>
    <string name="waterusers">Water Users</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search…</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_rent_defaulter1">rentDefaulter1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_water_defaulters">waterDefaulters</string>
    <string name="title_activity_other_payment_defaulters">otherPaymentDefaulters</string>
    <string name="title_activity_message_contact_list">MessageContactList</string>
    <string name="title_activity_buy_and_sell">BuyAndSell</string>
    <string name="title_activity_product_detailspage">Product Details</string>
    <string name="title_activity_sales_contact">My Contact</string>
    <string name="title_activity_water_bill_payment">WaterBillPayment</string>
    <string name="title_activity_other_payments">OtherPayments</string>
    <string name="title_activity_delivery_truck">DeliveryTruck</string>
    <string name="title_activity_water_meter_reading">waterMeterReading</string>


</resources>