<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mysnackbarView"
    tools:context=".Auths.register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="40dp"
            >


           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <ImageView
                   android:id="@+id/ivRegLogo"
                   android:layout_width="150dp"
                   android:layout_height="150dp"
                   android:layout_marginBottom="20dp"
                   android:layout_marginTop="18dp"
                   android:layout_centerInParent="true"
                   android:scaleType="fitCenter"
                   android:src="@drawable/logo" />
           </RelativeLayout>



            <TextView
                android:id="@+id/ivJoinUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="Sign Up"
                android:textAllCaps="true"
                android:textColor="@color/PrimaryColor"
                android:textSize="20sp"
                 />


            <EditText
                android:id="@+id/atvFname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="@string/fname"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/PrimaryWhite"
                android:textColorHint="@color/PrimaryColor"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/atvLname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="@string/lname"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/PrimaryWhite"
                android:textColorHint="@color/PrimaryColor"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/atvPhone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/PhoneReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/PrimaryWhite"
                android:textColorHint="@color/PrimaryColor"
                android:textSize="15sp" />



            <EditText
                android:id="@+id/atvPasswordReg"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_password"
                android:hint="@string/passwordReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/PrimaryWhite"
                android:textColorHint="@color/PrimaryColor"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/atvPasswordReg2"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_password"
                android:hint="@string/passwordReg2"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/PrimaryWhite"
                android:textColorHint="@color/PrimaryColor"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/btnsignin_gradient"
                android:text="@string/sign_upReg"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/signin_redirect"
                android:textColor="@color/PrimaryColor" />



        </LinearLayout>



    </ScrollView>

</RelativeLayout>