<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mysnackbarView"
    android:background="@color/PrimaryLightColor"
    tools:context=".Auths.login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            >


            <ImageView
                android:id="@+id/ivLogLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="55dp"
                android:layout_marginTop="18dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />


           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_marginBottom="15dp"
               android:layout_height="match_parent">
               <TextView
                   android:id="@+id/ivSignIn"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   android:textStyle="bold"
                   android:textAllCaps="true"
                   android:textColor="@color/PrimaryColor"
                   android:text="Sign In" />
           </RelativeLayout>


            <EditText
                android:id="@+id/atvPhoneNo"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/PhoneReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/PrimaryWhite"
                android:textColorHint="@color/PrimaryColor"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/atvPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:hint="@string/passwordReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/PrimaryWhite"
                android:textColorHint="@color/PrimaryColor"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/forgot_password"
                android:textColor="@color/PrimaryColor" />


            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btnsignin_gradient"
                android:text="@string/sign_inLog"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:text="@string/sign_upReg"
                android:textColor="@color/PrimaryColor" />

        </LinearLayout>



    </ScrollView>

</RelativeLayout>